--- a/GuessMyNumber/nbproject/project.properties
+++ b/GuessMyNumber/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/GuessMyNumber.jar
+dist.jar=${dist.dir}/TP1_GuessMyNumber_ROUART.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/GuessMyNumber
+dist.jlink.output=${dist.jlink.dir}/TP1_GuessMyNumber_ROUART
 excludes=
 includes=**
 jar.compress=false
@@ -70,7 +70,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=GuessMyNumber
+jlink.launcher.name=TP1_GuessMyNumber_ROUART
 main.class=guessmynumber.GuessMyNumber
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
