--- a/TP_Quiz_ROUART/nbproject/project.properties
+++ b/TP_Quiz_ROUART/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=TP_Quiz_ROUART
-main.class=
+main.class=FenetreQuiz
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
